# TCTI-V1OOPC-15-BASE

./: .gitignore  CMakeLists.txt  Git - Shortcut.lnk  Makefile  __codelite.workspace
.codelite/: __codelite.session
13-01-rational/: main.cpp  rational.hpp
13-2-ADT_vector/: Doxyfile  Vector.cpp  Vector.h  _codelite.project  main.cpp
13-2-ADT_vector/latex/: annotated.tex  class_vector.tex  refman.tex
17-1-Dikkere_muren/: _codelite.project  main.cpp  rectangle.hpp  wall.cpp  wall.hpp
17-2-Stuiteren/: _codelite.project  drawable.hpp  main.cpp  rectangle.cpp  rectangle.hpp  vector.hpp  wall.hpp
17-3-Verdwijnen/: _codelite.project  ball.cpp  drawable.cpp  line.cpp  line.hpp  main.cpp  rectangle.hpp  victim.cpp  victim.h  wall.cpp
22-2-patroon/: _codelite.project  main.cpp
22-3-input/: _codelite.project  main.cpp
22-4-HC595/: _codelite.project  main.cpp
22-5-Decorator/: _codelite.project  main.cpp  main.elf  main.map
22-6-knipper/: Makefile  _codelite.project  main.cpp  main.elf  main.map
OLED/: ball.hpp  circle.hpp  drawable.hpp  line.hpp  main.cpp  main.elf  main.map  rectangle.hpp  victim.hpp  wall.hpp
OLED - back-up/: _codelite.project  ball.cpp  ball.hpp  circle.cpp  circle.hpp  drawable.cpp  drawable.hpp  line.cpp  line.hpp  main.elf  main.map  rectangle.cpp  rectangle.hpp  vector.cpp  vector.hpp  victim.cpp  victim.hpp  wall.cpp  wall.hpp
hwlib/: hwlib-graphics.hpp
kit/: _codelite.project  main.cpp
week1/: _codelite.project  filled_rectangle.cpp  filled_rectangle.hpp  grafiek.cpp  grafiek.hpp  main.cpp
